update gopeed templates

--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -2188,12 +2188,12 @@
   "appid": 36,
   "appname": "gopeed",
   "apptitle": "Gopeed",
-  "apptype": "Tools",
-  "appTypeCN": "实用工具",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
   "appversion": [
     {"m_version":"latest","s_version":[]}
   ],
-  "appdesc": "Gopeed 是一个支持多协议的下载工具",
+  "appdesc": "榨干你的网速！Gopeed是一款由Golang+Flutter开发的高速下载器，支持（HTTP、BitTorrent、Magnet）协议下载，并且支持全平台使用",
   "appstatus": 1,
   "icon": "",
   "sort": 37,
@@ -2202,7 +2202,7 @@
   "cpu": 0,
   "mem": 0,
   "disk": 10240,
-  "updateat": 1722408250,
+  "updateat": 1761731622,
   "installed": false,
   "reuse": true,
   "depend": null,
