update dashy templates

--- a/apps/dashy/dashy/.env
+++ b/apps/dashy/dashy/.env
@@ -1,7 +1,6 @@
-VERSION=3.1.0
-CONTAINER_NAME=CONTAINER_NAME
+VERSION=latest
 HOST_IP=127.0.0.1
-WEB_HTTP_PORT=8080
+DASHY_WEB_PORT=4000
 CPUS=0
 MEMORY_LIMIT=0
-APP_PATH=/www/dk_project/dk_app/dashy
+APP_PATH=/www/dk_project/dk_app/Dashy
