--- a/apps/dashy/app.json
+++ b/apps/dashy/app.json
@@ -1,40 +1,41 @@
 {
-    "appid": 47,
-    "appname": "dashy",
-    "apptitle": "Dashy",
-    "apptype": "BuildWebsite",
-    "appTypeCN": "建站",
-    "appversion": [
-        {"m_version":"3","s_version":["1.0"]},
-        {"m_version":"2","s_version":["1.2"]}
-    ],
-    "appdesc": "Dashy 是一个功能强大的仪表盘系统",
-    "appstatus": 1,
-    "icon": "",
-    "sort": 31,
-    "home": "",
-    "help": "",
-    "cpu": 0,
-    "mem": 0,
-    "disk": 10240,
-    "updateat": 1722308764,
-    "installed": false,
-    "reuse": true,
-    "depend": null,
-    "field": [
-        {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
-        {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问，如果您设置了域名请不要勾选这里","unit":""},
-        {"attr":"web_http_port","name":"端口","type":"number","default":8080,"suffix":"","unit":""},
-        {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
-        {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""}
-    ],
-    "env": [
-        {"key":"version","type":"string","default":null,"desc":"版本号"},
-        {"key":"web_http_port","type":"port","default":null,"desc":"端口"},
-        {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
-        {"key":"host_ip","type":"string","default":null,"desc":"主机IP"},
-        {"key":"cpus","type":"number","default":null,"desc":"cpu核心数限制"},
-        {"key":"memory_limit","type":"number","default":null,"desc":"内存限制"}
-    ],
-    "volumes": {"conf.yml": {"type": "file", "desc": "配置文件"}, "item-icons": {"type": "path", "desc": "图标目录"}}
+  "appid": 47,
+  "appname": "dashy",
+  "apptitle": "Dashy",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
+  "appversion": [
+    {"m_version": "latest","s_version": []}
+  ],
+  "appdesc": "打造终极导航面板,自托管的个性化导航仪表盘，支持状态检查、小工具、主题、图标包与可视化界面编辑器；可通过简单的 YAML 配置快速管理与扩展。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 26,
+  "home": "https://github.com/Lissy93/dashy",
+  "help": "https://github.com/Lissy93/dashy",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1761804725,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr": "domain", "name": "域名", "type": "textarea", "default": "", "suffix": "浏览器访问的域名,非必填", "unit": ""},
+    {"attr": "allow_access", "name": "允许外部访问", "type": "checkbox", "default": true, "suffix": "允许直接通过主机IP+端口访问", "unit": ""},
+    {"attr": "dashy_web_port", "name": "Web端口", "type": "number", "default": 4000, "suffix": "Web访问端口", "unit": ""},
+    {"attr": "cpus", "name": "cpu核心数限制", "type": "number", "default": 0, "suffix": "0为不限制,最大可用核心数为: ", "unit": ""},
+    {"attr": "memory_limit", "name": "内存限制", "type": "number", "default": 0, "suffix": "0为不限制,最大可用内存为: ", "unit": ""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key": "dashy_web_port","type": "port","default": 4000,"desc": "Web端口"},
+    {"key": "app_path","type": "path","default": null,"desc": "应用数据目录"},
+    {"key": "host_ip","type": "string","default": null,"desc": "主机IP"},
+    {"key": "cpus","type": "number","default": null,"desc": "CPU核心数限制"},
+    {"key": "memory_limit","type": "number","default": null,"desc": "内存大小限制"}
+  ],
+  "volumes": {
+    "data": {"type": "path","desc": "应用数据目录"}
+  }
 }
