--- a/apps/dashy/dashy/docker-compose.yml
+++ b/apps/dashy/dashy/docker-compose.yml
@@ -1,22 +1,16 @@
 services:
-  BT_SERVICE_NAME6:
-    image: lissy93/dashy:${VERSION}
-    #    container_name: ${CONTAINER_NAME}
+  dashy-app:
+    image: lissy93/dashy:latest
+    restart: always
+    volumes:
+      - ${APP_PATH}/data/conf.yml:/app/public/conf.yml
+    ports:
+      - "${HOST_IP}:${DASHY_WEB_PORT}:8080"
     deploy:
       resources:
         limits:
-          cpus: ${CPUS}
-          memory: ${MEMORY_LIMIT}
-    environment:
-        - NODE_ENV=production
-        - UID=1000
-        - GID=1000
-    ports:
-        - ${HOST_IP}:${WEB_HTTP_PORT}:8080
-    restart: always
-    volumes:
-        - ${APP_PATH}/conf.yml:/app/user-data/conf.yml
-        - ${APP_PATH}/item-icons:/app/user-data/item-icons
+          cpus: "${CPUS}"
+          memory: "${MEMORY_LIMIT}"
     labels:
       createdBy: "bt_apps"
     networks:
