--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -11722,5 +11722,48 @@
     {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
   ],
   "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
+},
+{
+  "appid": 267,
+  "appname": "wallabag",
+  "apptitle": "Wallabag",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
+  "appversion": [
+    {"m_version":"latest","s_version":[]}
+  ],
+  "appdesc": "Wallabag 是一款可自行托管的稍后阅读工具，支持保存网页内容、分类管理与多端同步。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 22,
+  "home": "https://github.com/wallabag/wallabag",
+  "help": "https://doc.wallabag.org/en/",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1722408250,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
+    {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问","unit":""},
+    {"attr":"web_http_port","name":"web端口","type":"number","default":8080,"suffix":"","unit":""},
+    {"attr":"SYMFONY__ENV__DOMAIN_NAME","name":"应用访问域名","type":"string","default":"http://localhost:8080","suffix":"用于 Wallabag 内部链接生成","unit":""},
+    {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
+    {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""},
+    {"attr":"username","name":"默认用户名","type":"string","default":"wallabag","suffix":"不可修改 请前往应用修改","unit":""},
+    {"attr":"password","name":"默认密码","type":"string","default":"wallabag","suffix":"不可修改 请前往应用修改","unit":""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key":"web_http_port","type":"port","default":8080,"desc":"web端口"},
+    {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
+    {"key":"host_ip","type":"string","default":null,"desc":"主机IP"},
+    {"key":"cpus","type":"number","default":null,"desc":"CPU核心数限制"},
+    {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"},
+    {"key":"SYMFONY__ENV__DOMAIN_NAME","type":"string","default":"http://localhost:8080","desc":"应用访问域名"}
+  ],
+  "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
 }
 ]
