--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -11765,5 +11765,44 @@
     {"key":"SYMFONY__ENV__DOMAIN_NAME","type":"string","default":"http://localhost:8080","desc":"应用访问域名"}
   ],
   "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
+},
+{
+  "appid": 268,
+  "appname": "pdf2zh",
+  "apptitle": "pdf2zh-PDF双语翻译",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
+  "appversion": [
+    {"m_version":"latest","s_version":[]}
+  ],
+  "appdesc": "基于多引擎（Google/DeepL/Ollama/OpenAI）对 PDF 文档进行完整保留排版的全文双语翻译，支持 CLI/GUI/MCP/Docker/Zotero 等集成。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 22,
+  "home": "https://github.com/Byaidu/PDFMathTranslate",
+  "help": "https://github.com/Byaidu/PDFMathTranslate",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1761814091,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
+    {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问","unit":""},
+    {"attr":"web_http_port","name":"web端口","type":"number","default":7860,"suffix":"","unit":""},
+    {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
+    {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key":"web_http_port","type":"port","default":7860,"desc":"web端口"},
+    {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
+    {"key":"host_ip","type":"string","default":null,"desc":"主机IP"},
+    {"key":"cpus","type":"number","default":null,"desc":"CPU核心数限制"},
+    {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
+  ],
+  "volumes": {}
 }
 ]
