--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -11843,5 +11843,44 @@
     {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
   ],
   "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
+},
+{
+  "appid": 270,
+  "appname": "xiaomusic",
+  "apptitle": "Xiaomusic",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
+  "appversion": [
+    {"m_version":"latest","s_version":[]}
+  ],
+  "appdesc": "解放小爱音箱，让小爱同学支持B站/YouTube 等音源，管理本地音乐库，关键功能全免费。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 22,
+  "home": "https://github.com/hanxi/xiaomusic",
+  "help": "https://github.com/hanxi/xiaomusic",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1722408250,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
+    {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问","unit":""},
+    {"attr":"xiaomusic_web_port","name":"web端口","type":"number","default":8090,"suffix":"","unit":""},
+    {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
+    {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key":"xiaomusic_web_port","type":"port","default":8090,"desc":"web端口"},
+    {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
+    {"key":"host_ip","type":"string","default":null,"desc":"主机IP"},
+    {"key":"cpus","type":"number","default":null,"desc":"CPU核心数限制"},
+    {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
+  ],
+  "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
 }
 ]
