--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -12166,5 +12166,45 @@
     {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
   ],
   "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
+},
+{
+  "appid": 278,
+  "appname": "watchyourlan",
+  "apptitle": "WatchYourLAN",
+  "apptype": "nas",
+  "appTypeCN": "Nas",
+  "appversion": [
+    {"m_version":"latest","s_version":[]}
+  ],
+  "appdesc": "一款基于Web的轻量级IP扫描器，能自动发现局域网设备并生成可视化拓扑，支持暗黑模式/设备备注/异常告警，Docker部署完即用不用写一行代码。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 24,
+  "home": "https://github.com/aceberg/WatchYourLAN",
+  "help": "https://github.com/aceberg/WatchYourLAN",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1761898149,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
+    {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问，如果您设置了域名请不要勾选这里","unit":""},
+    {"attr":"watchyourlan_web_port","name":"Web端口","type":"number","default":8840,"suffix":"WatchYourLAN Web界面访问端口","unit":""},
+    {"attr":"iface","name":"网络接口","type":"text","default":"eth0","suffix":"网络接口名称","unit":""},
+    {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
+    {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key":"watchyourlan_web_port","type":"port","default":8840,"desc":"Web端口"},
+    {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
+    {"key":"iface","type":"string","default":"eth0","desc":"网络接口名称"},
+    {"key":"cpus","type":"number","default":null,"desc":"CPU核心数限制"},
+    {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
+  ],
+  "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
 }
 ]
