update grafana templates

--- a/apps/grafana/app.json
+++ b/apps/grafana/app.json
@@ -2,12 +2,12 @@
     "appid": 41,
     "appname": "grafana",
     "apptitle": "Grafana",
-    "apptype": "Tools",
-    "appTypeCN": "实用工具",
+    "apptype": "nas",
+    "appTypeCN": "Nas",
     "appversion": [
         {"m_version":"latest","s_version":[]}
     ],
-    "appdesc": "Grafana 是一个开源的数据可视化工具",
+    "appdesc": "Grafana是一款跨平台的开源可视化监控工具，支持通过SNMP等协议采集系统与设备指标,，实时采集群晖CPU、内存、硬盘等20+项关键指标数据，并提供强大的仪表盘展示与告警能力。",
     "appstatus": 1,
     "icon": "",
     "sort": 42,
@@ -16,7 +16,7 @@
     "cpu": 0,
     "mem": 0,
     "disk": 10240,
-    "updateat": 1722308764,
+    "updateat": 1761901694,
     "installed": false,
     "reuse": true,
     "depend": null,
