--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -12329,5 +12329,45 @@
     {"key":"next_public_app_url","type":"string","default":"http://127.0.0.1:3377","desc":"应用访问URL"}
   ],
   "volumes": {"data": {"type": "path", "desc": "应用数据目录"}}
+},
+{
+  "appid": 282,
+  "appname": "sshwifty",
+  "apptitle": "Sshwifty",
+  "apptype": "nas",
+  "appTypeCN": "NAS",
+  "appversion": [
+    {"m_version":"latest","s_version":[]}
+  ],
+  "appdesc": "Sshwifty 是一款基于 Web 的 SSH/Telnet 客户端，只需在服务器部署一次，即可通过浏览器远程管理服务器，支持多设备便捷运维。",
+  "appstatus": 1,
+  "icon": "",
+  "sort": 22,
+  "home": "https://github.com/nirui/sshwifty",
+  "help": "https://github.com/nirui/sshwifty#readme",
+  "cpu": 0,
+  "mem": 0,
+  "disk": 10240,
+  "updateat": 1761904535,
+  "installed": false,
+  "reuse": true,
+  "depend": null,
+  "field": [
+    {"attr":"domain","name":"域名","type":"textarea","default":"","suffix":"浏览器访问的域名,非必填","unit":""},
+    {"attr":"allow_access","name":"允许外部访问","type":"checkbox","default":true,"suffix":"允许直接通过主机IP+端口访问","unit":""},
+    {"attr":"web_http_port","name":"web端口","type":"number","default":8182,"suffix":"","unit":""},
+    {"attr":"cpus","name":"cpu核心数限制","type":"number","default":0,"suffix":"0为不限制,最大可用核心数为: ","unit":""},
+    {"attr":"memory_limit","name":"内存限制","type":"number","default":0,"suffix":"0为不限制,最大可用内存为: ","unit":""},
+    {"attr":"tips","name":"说明：","type":"string","default":"改应用需要配置ssl 否则无法使用","suffix":"0为不限制,最大可用内存为: ","unit":""}
+  ],
+  "env": [
+    {"key":"version","type":"string","default":null,"desc":"版本号"},
+    {"key":"web_http_port","type":"port","default":8182,"desc":"web端口"},
+    {"key":"app_path","type":"path","default":null,"desc":"应用数据目录"},
+    {"key":"host_ip","type":"string","default":null,"desc":"主机IP"},
+    {"key":"cpus","type":"number","default":null,"desc":"CPU核心数限制"},
+    {"key":"memory_limit","type":"number","default":null,"desc":"内存大小限制"}
+  ],
+  "volumes": {}
 }
 ]
