--- a/pkg/apps.json
+++ b/pkg/apps.json
@@ -7583,6 +7583,7 @@
   "apptype": "Tools",
   "appTypeCN": "实用工具",
   "appversion": [
+    {"m_version":"1","s_version":["8.1"]},
     {"m_version":"1","s_version":["2.0"]}
   ],
   "appdesc": "一个灵活，可靠和快速的分布式任务重试和分布式任务调度平台",
@@ -7594,7 +7595,7 @@
   "cpu": 0,
   "mem": 0,
   "disk": 10240,
-  "updateat": 1722408250,
+  "updateat": 1762564480,
   "installed": false,
   "reuse": true,
   "depend": [
@@ -12388,7 +12389,7 @@
   "cpu": 0,
   "mem": 0,
   "disk": 10240,
-  "updateat": 1722408250,
+  "updateat": 1761905783,
   "installed": false,
   "reuse": true,
   "depend": null,
